国际化支持

--- a/Resources/Pages/IndexModel.en.resx
+++ b/Resources/Pages/IndexModel.en.resx
@@ -117,107 +117,107 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CommonComparisonTable" xml:space="preserve">
-    <value>常用对照表</value>
+  <data name="ASCII Character Reference" xml:space="preserve">
+    <value>ASCII Character Reference</value>
   </data>
-  <data name="ConversionTool" xml:space="preserve">
-    <value>转换工具</value>
+  <data name="Base conversion" xml:space="preserve">
+    <value>Base conversion</value>
   </data>
-  <data name="String1" xml:space="preserve">
-    <value>文本工具</value>
+  <data name="Color value conversion" xml:space="preserve">
+    <value>Color value conversion</value>
   </data>
-  <data name="String10" xml:space="preserve">
-    <value>正则表达式</value>
+  <data name="Common Comparison Table" xml:space="preserve">
+    <value>Common Comparison Table</value>
   </data>
-  <data name="String11" xml:space="preserve">
-    <value>编码解码</value>
+  <data name="Common Linux commands" xml:space="preserve">
+    <value>Common Linux commands</value>
   </data>
-  <data name="String12" xml:space="preserve">
-    <value>Guid生成</value>
+  <data name="Common Mime Type Reference Table" xml:space="preserve">
+    <value>Common Mime Type Reference Table</value>
   </data>
-  <data name="String13" xml:space="preserve">
-    <value>二维码生成</value>
+  <data name="Conversion Tool" xml:space="preserve">
+    <value>Conversion Tool</value>
   </data>
-  <data name="String14" xml:space="preserve">
-    <value>简单主图生成</value>
+  <data name="Coupon Inquiry" xml:space="preserve">
+    <value>Coupon Inquiry</value>
   </data>
-  <data name="String15" xml:space="preserve">
-    <value>视频嵌入代码生成</value>
+  <data name="CSS Selector reference table" xml:space="preserve">
+    <value>CSS Selector reference table</value>
   </data>
-  <data name="String16" xml:space="preserve">
-    <value>商品卡片生成</value>
+  <data name="Emoji" xml:space="preserve">
+    <value>Emoji</value>
   </data>
-  <data name="String17" xml:space="preserve">
-    <value>Ip查询</value>
+  <data name="Encoding And Decoding" xml:space="preserve">
+    <value>Encoding And Decoding</value>
   </data>
-  <data name="String18" xml:space="preserve">
-    <value>一键下载图片</value>
+  <data name="Encoding Conversion" xml:space="preserve">
+    <value>Encoding Conversion</value>
   </data>
-  <data name="String19" xml:space="preserve">
-    <value>优惠券查询</value>
+  <data name="Frequently Used Phone List" xml:space="preserve">
+    <value>Frequently Used Phone List</value>
   </data>
-  <data name="String2" xml:space="preserve">
-    <value>编码转换</value>
+  <data name="Generating tools" xml:space="preserve">
+    <value>Generating tools</value>
   </data>
-  <data name="String20" xml:space="preserve">
-    <value>网站链接检测工具</value>
+  <data name="Git Command Reference Table" xml:space="preserve">
+    <value>Git Command Reference Table</value>
   </data>
-  <data name="String21" xml:space="preserve">
-    <value>常见 MimeType 参考表</value>
+  <data name="Guid Generation" xml:space="preserve">
+    <value>Guid Generation</value>
   </data>
-  <data name="String22" xml:space="preserve">
-    <value>CSS 选择器参考表</value>
+  <data name="HTTP status code" xml:space="preserve">
+    <value>HTTP status code</value>
   </data>
-  <data name="String23" xml:space="preserve">
-    <value>Vim命令参考表</value>
+  <data name="Ip Query" xml:space="preserve">
+    <value>Ip Query</value>
   </data>
-  <data name="String24" xml:space="preserve">
-    <value>Git命令参考表</value>
+  <data name="Json formatting" xml:space="preserve">
+    <value>Json formatting</value>
   </data>
-  <data name="String25" xml:space="preserve">
-    <value>Emoji表情符号</value>
+  <data name="Markdown Editor" xml:space="preserve">
+    <value>Markdown Editor</value>
   </data>
-  <data name="String26" xml:space="preserve">
-    <value>Linux常用命令</value>
+  <data name="One Click Download Of Images" xml:space="preserve">
+    <value>One Click Download Of Images</value>
   </data>
-  <data name="String27" xml:space="preserve">
-    <value>特殊符号大全</value>
+  <data name="Product Card Generation" xml:space="preserve">
+    <value>Product Card Generation</value>
   </data>
-  <data name="String28" xml:space="preserve">
-    <value>HTTP状态码对照表</value>
+  <data name="QRCode Generation" xml:space="preserve">
+    <value>QRCode Generation</value>
   </data>
-  <data name="String29" xml:space="preserve">
-    <value>Url转义字符参考表</value>
+  <data name="Query tools" xml:space="preserve">
+    <value>Query tools</value>
   </data>
-  <data name="String3" xml:space="preserve">
-    <value>生成工具</value>
+  <data name="Regular Expression" xml:space="preserve">
+    <value>Regular Expression</value>
   </data>
-  <data name="String30" xml:space="preserve">
-    <value>常用电话列表</value>
+  <data name="Simple Main Image Generation" xml:space="preserve">
+    <value>Simple Main Image Generation</value>
   </data>
-  <data name="String31" xml:space="preserve">
-    <value>ASCII字符参考</value>
+  <data name="Special Symbols" xml:space="preserve">
+    <value>Special Symbols</value>
   </data>
-  <data name="String4" xml:space="preserve">
-    <value>查询工具</value>
-  </data>
-  <data name="String5" xml:space="preserve">
-    <value>进制转换</value>
-  </data>
-  <data name="String6" xml:space="preserve">
-    <value>颜色值转换</value>
-  </data>
-  <data name="String7" xml:space="preserve">
-    <value>字数统计</value>
-  </data>
-  <data name="String8" xml:space="preserve">
-    <value>Json格式化</value>
-  </data>
-  <data name="String9" xml:space="preserve">
-    <value>Markdown编辑</value>
+  <data name="Text Tool" xml:space="preserve">
+    <value>Text Tool</value>
   </data>
   <data name="ToolOnline" xml:space="preserve">
-    <value>在线工具</value>
+    <value>ToolOnline</value>
     <comment>网站标题</comment>
+  </data>
+  <data name="Url Escape Character" xml:space="preserve">
+    <value>Url Escape Character</value>
+  </data>
+  <data name="Video Embedding Code Generation" xml:space="preserve">
+    <value>Video Embedding Code Generation</value>
+  </data>
+  <data name="Vim Command Reference Table" xml:space="preserve">
+    <value>Vim Command Reference Table</value>
+  </data>
+  <data name="Website Link Detection Tool" xml:space="preserve">
+    <value>Website Link Detection Tool</value>
+  </data>
+  <data name="Word count" xml:space="preserve">
+    <value>Word count</value>
   </data>
 </root>
